add client error status codes
